# computeragent

./: README.md
client/: CONTRIBUTING.md  README.md  requirements.txt
client/operate/: config.py  main.py  operate.py
client/operate/models/: apis.py  client_commands.py
client/operate/utils/: label.py  ocr.py  operating_system.py
client/self_operating_computer.egg-info/: PKG-INFO  requires.txt
server/: .dockerignore  .gitignore  .python-version  Dockerfile  LICENSE  README.md  README_CICD.md  README_NVIDIA.md  auto_delete_tags.sh  build.sh  config.py  cuda.git  delete_tag.sh  docker-compose.yml  dotdict.py  error.py  manager-config.yaml  manager.py  nvidia_entrypoint.sh  push_readme.sh  pyproject.toml  shipitdata.py  util.sh  utils.py
server/computeragent_libs/: pyproject.toml
server/doc/: README.md  support-policy.md  supported-tags.md  unsupported-tags.md
server/entrypoint.d/: 10-banner.sh  12-banner.sh  15-container-copyright.txt  30-container-license.txt  50-gpu-driver-check.sh  80-internal-image.sh  90-deprecated-image.sh
server/manifests/: cuda.yaml  rc-push-repos.yml
server/self-operating-computer/operate/: config.py  server_commands.py
server/self-operating-computer/operate/models/: prompts.py
server/templates/: README.md
server/templates/doc/: README.md.jinja  supported-tags.md.Jinja  unsupported-tags.md.Jinja
server/templates/gitlab/: gitlab-ci.yml.jinja
server/templates/redhat/: base-cuda.repo.j2  base-dockerfile.j2  cudnn-dockerfile.j2  devel-dockerfile.j2  runtime-dockerfile.j2
server/templates/ubuntu/: base-dockerfile.j2  cudnn-dockerfile.j2  devel-dockerfile.j2  runtime-dockerfile.j2
server/test/: 00-nvidia-smi.bats  01-samples.bats  02-ld-library-path.bats  03-tools.bats  04-install.bats  05-arch.bats  06-check-nvidia-require-cuda.bats  07-nccl.bats  08-cudnn7.bats  09-cudnn8.bats  10-license.bats  README.md  helpers.bash
server/test/scripts/: bats_install.sh  run_tests.sh
server/test_manager/: test_cuda_keyring.py  test_gitlab.py  test_manager.py  test_shipitdata.py  test_supported_platforms.py  test_utils.py
server/test_manager/data/: kitmaker_generate_expected_directory_structure.json  kitmaker_generate_expected_directory_structure_l4t.json  l4t_cudnn_data.json  l4t_manifest.yml
